    returned (and not run in some cases) rather than the plugins directly
    forcing a user to log in.
  * opendiscussion: allow editing of the toplevel discussion page,
    and, indirectly, allow creating new discussion pages.
  * Add a prereq on Data::Dumper 2.11 or better, needed to dump q// objects.
  * htmlscrubber: Further work around #365971 by adding tags for 'br/', 'hr/'
    and 'p/'.

 -- Joey Hess <joeyh@debian.org>  Mon, 07 Jan 2008 15:35:16 -0500

ikiwiki (2.18) unstable; urgency=low

  * Split error messages for failures to drop real uid and gid.
  * Retry dropping uid and gid, possibly this will help with the "Resource
    temporarily unavailable" failures I've experienced under xen.
  * Stop testing Encode::is_utf8 in decode_form_utf8: That doesn't work.
  * decode_form_utf8 only fixed the utf-8 encoding for fields that were
    registered at the time it was called, which was before the
    formbuilder_setup hook. Fields added by the hook didn't get decoded.
    But it can't be put after the hook either, since plugins using the hook
    need to be able to use form values. To fix this dilemma, it's been changed
    to a decode_cgi_utf8, which is called on the cgi query object, before the
    form is set up, and decodes *all* cgi parameters.
  * aggregate: Only save state if it was already loaded. This didn't used to
    matter, but after recent changes, state is not always loaded, and saving
    would kill it.
  * table: Fix dependency tracking for external data files. Closes: #458387

 -- Joey Hess <joeyh@debian.org>  Sat, 05 Jan 2008 02:15:18 -0500

ikiwiki (2.17) unstable; urgency=low

  * Improved parentlinks special case for index pages.
  * redir: Support for specifying anchors.
  * img: Avoid nesting images when linking to another image. Closes: #457780
  * img: Allow the link parameter to point to an exterior url.
  * conditional: Improve regexp testing for simple uses of pagespecs