@@ -8,5 +8,8 @@
 <TMPL_IF NAME="PERMALINK">
 [[meta permalink="<TMPL_VAR NAME="PERMALINK" ESCAPE=HTML>"]]
 </TMPL_IF>
+<TMPL_IF NAME="COPYRIGHT">
+[[meta copyright="<TMPL_VAR NAME="COPYRIGHT" ESCAPE=HTML>"]]
+</TMPL_IF>
 [[meta author="<TMPL_VAR NAME="NAME" ESCAPE=HTML>"]]
 [[meta authorurl="<TMPL_VAR NAME="URL" ESCAPE=HTML>"]]
