@@ -11,6 +11,10 @@ ikiwiki (2.19) UNRELEASED; urgency=low
   * Add a prereq on Data::Dumper 2.11 or better, needed to dump q// objects.
   * htmlscrubber: Further work around #365971 by adding tags for 'br/', 'hr/'
     and 'p/'.
+  * aggregate: Include copyright statements from rss feed as meta copyright
+    directives.
+  * aggregate: Yet another state saving fix (sigh).
+  * aggregate: Add hack to support feeds with invalidly escaped html entities.
 
  -- Joey Hess <joeyh@debian.org>  Mon, 07 Jan 2008 15:35:16 -0500
 
